<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context="${packageName}.${activityClass}">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#eee"
        android:padding="25dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:textColor="#FF1E5524"
            android:textSize="30sp"
            android:layout_gravity="center"
            android:text="@string/title_main" />

        <TextView
            android:id="@+id/labelAutoComp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/add_product"
            />

        <AutoCompleteTextView
            android:id="@+id/actvProduct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="Produit"
            android:layout_gravity="center"
            android:ems="10" />

        <EditText
            android:id="@+id/quantityProduct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="Quantité (facultatif)"
            android:ems="10" />

        <Button
            android:id="@+id/buttonAddProduct"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/add"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:minHeight="6dip"
            android:minWidth="10dip"
            android:padding="10dp"
            android:textColor="#FFFFFF"
            android:background="#000000"/>

        <LinearLayout
            android:id="@+id/layoutShoppingList"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:background="@drawable/list_border"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/titreList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:background="#334169E1"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_marginTop="0dp"
                android:textColor="#000000"
                android:textStyle="bold"
                android:gravity="center"
                android:text="@string/list_shopping"/>


        </LinearLayout>

        <ImageView
            android:id="@+id/android_picture"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:maxWidth="30dp"
            android:src="@drawable/grocery_cart" />

    </LinearLayout>
</ScrollView>